<resources>

    <string name="app_name">OHAP Client 23</string>
    <string name="action_settings">Settings</string>

    <string name="id_label">ID:</string>
    <string name="name_label">NAME:</string>
    <string name="path_label">PATH:</string>
    <string name="description_label">DESCRIPTION:</string>
    <string name="switch_label">STATUS: (On/Off)</string>

    <string name="items_count_label">ITEMS COUNT:</string>
    <string name="is_listening_label">LISTENING:</string>
    <string name="item_type_label">TYPE:</string>

    <string name="preferences_group_name">Preferred URL setting</string>
    <string name="preferred_url_title">Preferred URL</string>
    <string name="preferred_url_key">preferred_URL</string>
    <string name="preferred_url_default_value">http://ohap.opimobi.com:8080/</string>

</resources>
