<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:background="#9aacacac">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name_label"
            android:id="@+id/textView4"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView_name"
            android:gravity="center_vertical|center_horizontal"
            android:elegantTextHeight="false"
            android:maxLines="2"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/item_type_label"
                android:id="@+id/textView2"
                android:gravity="center_vertical|center_horizontal" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView_type"
                android:gravity="center_vertical|center_horizontal"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/id_label"
                android:gravity="center_vertical|center_horizontal" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView_id"
                android:gravity="center_vertical|center_horizontal"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/description_label"
            android:id="@+id/textView6"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView_description"
            android:gravity="center_vertical|center_horizontal"
            android:maxLines="2"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:id="@+id/container_details_layout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/items_count_label"
                android:id="@+id/textView8"
                android:gravity="center_vertical|center_horizontal" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView_items_count"
                android:gravity="center_vertical|center_horizontal"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/is_listening_label"
                android:id="@+id/textView10"
                android:gravity="center_vertical|center_horizontal" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView_listening"
                android:gravity="center_vertical|center_horizontal"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>