<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fi.oulu.tol.esde23.ohapclient23.DeviceActivity"
    tools:showIn="@layout/activity_device">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name_label"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView_name"
            android:gravity="center_vertical|end"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:maxLines="2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/id_label"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView_id"
            android:gravity="center_vertical|end"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:maxLines="2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/description_label" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView_description"
            android:gravity="center_vertical|end"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:maxLines="2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/path_label"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView_path"
            android:gravity="center_vertical|end"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:maxLines="2" />

    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/switch_label"
        android:id="@+id/switch_status"
        android:checked="false"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/seekBar_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="VALUE:"
            android:id="@+id/textView"
            android:gravity="center_vertical|center_horizontal" />

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/seekBar_value"
            android:indeterminate="false"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textField_measure_unit"
            android:gravity="center_vertical|center_horizontal"
            android:maxLines="2"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_medium_material" />

    </LinearLayout>

</LinearLayout>
